# SEthernet

./: .gitattributes  CERN-OHL-S-2.0  CMakeLists.txt  README.md  build.sh
boards/: .gitignore
boards/breakout/: breakout.kicad_pcb  breakout.kicad_pro  breakout.kicad_sch
boards/se/: mechanical.FCStd  mechanical.FCStd1  pds.kicad_sch  se.kicad_pcb  se.kicad_pro  se.kicad_sch
boards/se30/: fp-lib-table  pds.kicad_sch  se30.kicad_pcb  se30.kicad_pro  se30.kicad_sch  sym-lib-table
boards/shared/: PDS-Ethernet.kicad_sym
boards/shared/PDS-Ethernet.pretty/: DIN41612_C_3x32_Female_Vertical_THT_Reversed.kicad_mod  DIN41612_C_3x40_Female_Horizontal_THT.kicad_mod  DIN41612_C_3x40_Male_Horizontal_THT.kicad_mod  Kycon-GDTX-S-88_Vertical.kicad_mod  MountingHole_3.5mm_Pad.kicad_mod  Wurth_9774025360R.kicad_mod
boards/shared/PDS-Ethernet.pretty/3D/: 8420-11b1-01.stp  8432-11b1-01.stp  GDTX-S-88_rA7.STEP  PT61017PEL.stp  c-5650874-5-o-3d.stp  c-650906-5-l-3d.stp  c-650908-5-m-3d.stp
installer/: Build.mpw  README.md  UserStartup.mpw  atoms.r  build.sh  code.r  comments.r  filespecs.r  identifiers.r  misc.r  packages.r  rules.r  text2mac.py
pld/: .gitignore  CMakeLists.txt  README.md
pld/se/: CMakeLists.txt  README.md  build.bat  clean.bat  se-u2.pld
pld/se30/: CMakeLists.txt  README.md  build.bat  clean.bat  se30-bodge.pld  se30-u3.pld  se30-u4.pld
rom/: .gitignore  CMakeLists.txt
rom/se30/: CMakeLists.txt  Makefile  README.md  ROMDefs.inc  declrom.S  declrom.s  declrom_macros.inc  gencrc.py
software/: CMakeLists.txt
software/driver/: CMakeLists.txt  README.md  SEthernet.r  SEthernet30.r  driver.c  driver.h  enc624j600.c  header.S  isr.c  isr.h  isrwrapper.S  macsbug.inc  multicast.c  multicast.h  protocolhandler.c  protocolhandler.h  readpacket.S  readpacket.h  registertools.c  registertools.h  util.c  util.h
software/driver/include/: sethernet.h
software/include/: enc624j600_control.h  enc624j600_registers.h
software/shared/: CMakeLists.txt
software/shared/board_defs/: CMakeLists.txt
software/shared/board_defs/include/: sethernet30_board_defs.h  sethernet_board_defs.h
software/shared/buserror/: CMakeLists.txt  buserror.S
software/shared/buserror/include/: buserror.h
software/shared/enc624j600/: CMakeLists.txt  enc624j600.c
software/shared/enc624j600/include/: enc624j600.h  enc624j600_registers.h
software/shared/memtest/: CMakeLists.txt  README.md  memtest.c
software/shared/memtest/include/: memtest.h
software/shared/version/: CMakeLists.txt
software/tools/: CMakeLists.txt
software/tools/programROM/: CMakeLists.txt  flash.c  flash.h  programROM.c
software/tools/showDrivers/: CMakeLists.txt  README.md  showDrivers.c
software/tools/testMemory/: CMakeLists.txt  testMemory.c
